Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104484

Missing documentation for QDropEvent methods: position, buttons, modifiers

XMLWordPrintable

    • c2505751de (qt/qtbase/dev) c2505751de (qt/tqtc-qtbase/dev) baa568c41e (qt/qtbase/6.4) baa568c41e (qt/tqtc-qtbase/6.4) cb8ddc3965 (qt/tqtc-qtbase/6.2)

      https://doc.qt.io/qt-6/qdropevent.html is missing documentation for the QDropEvent::position, QDropEvent::buttons, and QDropEvent::modifiers methods. These methods are also missing from the List of All Members for QDropEvent page, as well as the corresponding pages for QDropEvent subclasses (such as QDragMoveEvent).  This documentation is also missing from the Qt 6.2 docs.

        For Gerrit Dashboard: QTBUG-104484
        # Subject Branch Project Status CR V

            kkohne Kai Köhne
            kevkeating Kevin Keating
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes