Doc: Document missing methods in QDropEvent

Fixes: QTBUG-104484
Change-Id: I20068bb9e641545edad67910b4586aa38aec093b
Reviewed-by: Kevin Keating
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit c2505751de802ae3e14df57c98ba9c3e9049dd50)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>